Updated #layout to prevent overflow and have a full screen height

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -45,6 +45,8 @@ body {
     display: flex;
     flex-wrap: nowrap; /* Ensures no wrapping of items */
     gap: 0; /* Space between aside and main */
+    min-height: 100vh; /* lock in min height to improve CLS score */
+    overflow: hidden;  /* prevents unexpected scrollbars */
 }
 
 main {
